force-app/main/default/objects/Quote/fields/Aplica_tramos__c.field-meta.xml
<CustomField>
    <fullName>Aplica_tramos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aplica tramos</label>
    <type>Checkbox</type>
</CustomField>