force-app/main/default/objects/Quote/fields/CCC_Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>CCC_Bank_Account_No__c</fullName>
    <label>Nº de cuenta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>