force-app/main/default/objects/Quote/fields/CCC_Bank_No__c.field-meta.xml
<CustomField>
    <fullName>CCC_Bank_No__c</fullName>
    <label>Entidad</label>
    <length>4</length>
    <type>Text</type>
</CustomField>