force-app/main/default/objects/Quote/fields/CCC_Control_digits__c.field-meta.xml
<CustomField>
    <fullName>CCC_Control_digits__c</fullName>
    <label>Dígitos de control</label>
    <length>2</length>
    <type>Text</type>
</CustomField>