force-app/main/default/objects/Quote/fields/CCC_No__c.field-meta.xml
<CustomField>
    <fullName>CCC_No__c</fullName>
    <formula>CCC_Bank_No__c&amp; &apos; &apos; &amp; CCC_Bank_Branch_No__c &amp; &apos; &apos; &amp; CCC_Control_digits__c &amp; &apos; &apos; &amp; CCC_Bank_Account_No__c</formula>
    <label>Cuenta corriente</label>
    <type>Text</type>
</CustomField>