force-app/main/default/objects/Quote/fields/CLV10__c.field-meta.xml
<CustomField>
    <fullName>CLV10__c</fullName>
    <label>CLV10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>