force-app/main/default/objects/Quote/fields/Comercial__c.field-meta.xml
<CustomField>
    <fullName>Comercial__c</fullName>
    <label>Comercial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>