force-app/main/default/objects/Quote/fields/Conexi_n_certificado_interior__c.field-meta.xml
<CustomField>
    <fullName>Conexi_n_certificado_interior__c</fullName>
    <label>Conexión + certificado interior</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>