force-app/main/default/objects/Quote/fields/Conexi_n_gas_red_ext__c.field-meta.xml
<CustomField>
    <fullName>Conexi_n_gas_red_ext__c</fullName>
    <label>Conexión gas red ext.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>