force-app/main/default/objects/Quote/fields/Consumo_contratado_kg__c.field-meta.xml
<CustomField>
    <fullName>Consumo_contratado_kg__c</fullName>
    <label>Consumo contratado kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>