force-app/main/default/objects/Quote/fields/Consumo_desde_L__c.field-meta.xml
<CustomField>
    <fullName>Consumo_desde_L__c</fullName>
    <label>Consumo desde L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>