force-app/main/default/objects/Quote/fields/Consumo_hasta_Kg__c.field-meta.xml
<CustomField>
    <fullName>Consumo_hasta_Kg__c</fullName>
    <label>Consumo hasta Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>