force-app/main/default/objects/Quote/fields/Consumo_previsto_kilos__c.field-meta.xml
<CustomField>
    <fullName>Consumo_previsto_kilos__c</fullName>
    <inlineHelpText>Este campo se utiliza si no hemos usado la auditoría energética</inlineHelpText>
    <label>Consumo previsto kilos</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>