force-app/main/default/objects/Quote/fields/Consumo_previsto_Toneladas__c.field-meta.xml
<CustomField>
    <fullName>Consumo_previsto_Toneladas__c</fullName>
    <formula>Total_KG__c /1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo previsto Toneladas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>