force-app/main/default/objects/Quote/fields/Consumo_previsto_toneladas_real__c.field-meta.xml
<CustomField>
    <fullName>Consumo_previsto_toneladas_real__c</fullName>
    <formula>( Consumo_previsto_kilos__c  /1000)*0.70</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumo previsto toneladas real</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>