force-app/main/default/objects/Quote/fields/Contador_Kg__c.field-meta.xml
<CustomField>
    <fullName>Contador_Kg__c</fullName>
    <label>Contador Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>