force-app/main/default/objects/Quote/fields/Contador_L__c.field-meta.xml
<CustomField>
    <fullName>Contador_L__c</fullName>
    <label>Contador L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>