force-app/main/default/objects/Quote/fields/Contadores__c.field-meta.xml
<CustomField>
    <fullName>Contadores__c</fullName>
    <label>Contadores</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>