force-app/main/default/objects/Quote/fields/Contract_length__c.field-meta.xml
<CustomField>
    <fullName>Contract_length__c</fullName>
    <label>Duración contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 años</fullName>
            </value>
            <value>
                <fullName>2 años</fullName>
            </value>
            <value>
                <fullName>3 años</fullName>
            </value>
            <value>
                <fullName>4 años</fullName>
            </value>
            <value>
                <fullName>5 años</fullName>
            </value>
            <value>
                <fullName>7 años</fullName>
            </value>
            <value>
                <fullName>10 años</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>