force-app/main/default/objects/Quote/fields/Contract_Length_tones__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length_tones__c</fullName>
    <label>Duración ( Toneladas )</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>