force-app/main/default/objects/Quote/fields/Contract_Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signing_Date__c</fullName>
    <label>Fecha firma</label>
    <type>Date</type>
</CustomField>