force-app/main/default/objects/Quote/fields/Conversi_n_gasoil_a_Kg_de_propano__c.field-meta.xml
<CustomField>
    <fullName>Conversi_n_gasoil_a_Kg_de_propano__c</fullName>
    <formula>Litros_gasoil_por_a_o__c  * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversión gasoil a Kg. de propano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>