force-app/main/default/objects/Quote/fields/COP__c.field-meta.xml
<CustomField>
    <fullName>COP__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>