force-app/main/default/objects/Quote/fields/Copiar_datos_a_direccion_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Copiar_datos_a_direccion_de_facturacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si se selecciona esta opción los datos de envío se copian en la sección de facturación</description>
    <inlineHelpText>Marcar esta opción si los datos de envío son los mismos que los de facturación</inlineHelpText>
    <label>Copiar datos a direccion de facturacion</label>
    <type>Checkbox</type>
</CustomField>