force-app/main/default/objects/Quote/fields/Coste_Asume_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Coste_Asume_Cliente__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Asume Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>