force-app/main/default/objects/Quote/fields/Coste_dep_sito__c.field-meta.xml
<CustomField>
    <fullName>Coste_dep_sito__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste depósito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>