force-app/main/default/objects/Quote/fields/Coste_deposito__c.field-meta.xml
<CustomField>
    <fullName>Coste_deposito__c</fullName>
    <label>Coste depósito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>