force-app/main/default/objects/Quote/fields/Coste_equipo_interior__c.field-meta.xml
<CustomField>
    <fullName>Coste_equipo_interior__c</fullName>
    <label>Coste equipo interior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>