force-app/main/default/objects/Quote/fields/Coste_extintores__c.field-meta.xml
<CustomField>
    <fullName>Coste_extintores__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste extintores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>