force-app/main/default/objects/Quote/fields/Coste_gas__c.field-meta.xml
<CustomField>
    <fullName>Coste_gas__c</fullName>
    <formula>COP__c +  Coste_actual_gas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>