force-app/main/default/objects/Quote/fields/Coste_instalacion_exterior__c.field-meta.xml
<CustomField>
    <fullName>Coste_instalacion_exterior__c</fullName>
    <label>Coste instalación exterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>