force-app/main/default/objects/Quote/fields/Coste_obra_civil__c.field-meta.xml
<CustomField>
    <fullName>Coste_obra_civil__c</fullName>
    <label>Coste obra civil</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>