force-app/main/default/objects/Quote/fields/Coste_proyectos__c.field-meta.xml
<CustomField>
    <fullName>Coste_proyectos__c</fullName>
    <label>Coste proyectos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>