force-app/main/default/objects/Quote/fields/Coste_resoluci_n__c.field-meta.xml
<CustomField>
    <fullName>Coste_resoluci_n__c</fullName>
    <label>Coste resolución (€/año)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>