force-app/main/default/objects/Quote/fields/Coste_resolucion_anticipos_eur_tn_letras__c.field-meta.xml
<CustomField>
    <fullName>Coste_resolucion_anticipos_eur_tn_letras__c</fullName>
    <label>Coste resolución anticipos (€/tn)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>