force-app/main/default/objects/Quote/fields/Coste_vallado__c.field-meta.xml
<CustomField>
    <fullName>Coste_vallado__c</fullName>
    <label>Coste vallado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>