force-app/main/default/objects/Quote/fields/CP_Env_o__c.field-meta.xml
<CustomField>
    <fullName>CP_Env_o__c</fullName>
    <label>CP Envío</label>
    <length>5</length>
    <type>Text</type>
</CustomField>