force-app/main/default/objects/Quote/fields/CP_facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>CP_facturaci_n__c</fullName>
    <label>CP facturación</label>
    <length>5</length>
    <type>Text</type>
</CustomField>