force-app/main/default/objects/Quote/fields/Cr_dito_requerido_estimado__c.field-meta.xml
<CustomField>
    <fullName>Cr_dito_requerido_estimado__c</fullName>
    <formula>invoice_ammount__c +  Total_Inversion_no__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crédito requerido estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>