force-app/main/default/objects/Quote/fields/Credito__c.field-meta.xml
<CustomField>
    <fullName>Credito__c</fullName>
    <description>Se ha cambiado el label de Credito a Riesgo</description>
    <label>Riesgo</label>
    <summarizedField>Deposito__c.Credito_divisa__c</summarizedField>
    <summaryForeignKey>Deposito__c.Presupuesto__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>