force-app/main/default/objects/Quote/fields/Cuota_inversion__c.field-meta.xml
<CustomField>
    <fullName>Cuota_inversion__c</fullName>
    <label>Cuota inversión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>