force-app/main/default/objects/Quote/fields/D_as_por_a_o2__c.field-meta.xml
<CustomField>
    <fullName>D_as_por_a_o2__c</fullName>
    <label>Días por año2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>