force-app/main/default/objects/Quote/fields/Dep_sito_cigue_a__c.field-meta.xml
<CustomField>
    <fullName>Dep_sito_cigue_a__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depósito cigueña</label>
    <type>Checkbox</type>
</CustomField>