force-app/main/default/objects/Quote/fields/Deposito_nombre__c.field-meta.xml
<CustomField>
    <fullName>Deposito_nombre__c</fullName>
    <label>Depósito</label>
    <length>80</length>
    <type>Text</type>
</CustomField>