force-app/main/default/objects/Quote/fields/Descuento_Kg__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Kg__c</fullName>
    <label>Descuento Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>