force-app/main/default/objects/Quote/fields/Descuento_L__c.field-meta.xml
<CustomField>
    <fullName>Descuento_L__c</fullName>
    <label>Descuento L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>