force-app/main/default/objects/Quote/fields/Descuento_primer_llenado__c.field-meta.xml
<CustomField>
    <fullName>Descuento_primer_llenado__c</fullName>
    <label>Descuento primer llenado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>