force-app/main/default/objects/Quote/fields/Diferencia__c.field-meta.xml
<CustomField>
    <fullName>Diferencia__c</fullName>
    <formula>Cr_dito_requerido_estimado__c - Garant_a_l_mite_de_cr_dito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>