force-app/main/default/objects/Quote/fields/Diferencia_importes_totales__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_importes_totales__c</fullName>
    <label>Diferencia importes totales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>