force-app/main/default/objects/Quote/fields/Diferencia_importes_totales_numeric__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_importes_totales_numeric__c</fullName>
    <description>Campo formula utilzado para mostrar los campos currencies con el formateo de Salesforce [#.##0,00] y sin mostrar la moneda [€]</description>
    <formula>Importe_total_numeric__c -  Importe_total_primagas_numeric__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia importes totales numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>