force-app/main/default/objects/Quote/fields/Diferencia_kgCO2__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_kgCO2__c</fullName>
    <label>Diferencia kgCO2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>