force-app/main/default/objects/Quote/fields/Diferencia_kWh__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_kWh__c</fullName>
    <label>Diferencia kWh</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>