force-app/main/default/objects/Quote/fields/Direcci_n_env_o__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_env_o__c</fullName>
    <label>Dirección envío</label>
    <type>TextArea</type>
</CustomField>