force-app/main/default/objects/Quote/fields/Direcci_n_facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_facturaci_n__c</fullName>
    <label>Dirección facturación</label>
    <type>TextArea</type>
</CustomField>