force-app/main/default/objects/Quote/fields/Dispositivo_existente1__c.field-meta.xml
<CustomField>
    <fullName>Dispositivo_existente1__c</fullName>
    <label>Dispositivo existente1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>