force-app/main/default/objects/Quote/fields/Dispositivo_existente_2__c.field-meta.xml
<CustomField>
    <fullName>Dispositivo_existente_2__c</fullName>
    <label>Dispositivo existente 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>