force-app/main/default/objects/Quote/fields/Dispositivo_existente_3__c.field-meta.xml
<CustomField>
    <fullName>Dispositivo_existente_3__c</fullName>
    <label>Dispositivo existente 3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>