force-app/main/default/objects/Quote/fields/Dto_1_Llenado_inversion__c.field-meta.xml
<CustomField>
    <fullName>Dto_1_Llenado_inversion__c</fullName>
    <label>Dto. 1 Llenado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>