force-app/main/default/objects/Quote/fields/Dto_ano__c.field-meta.xml
<CustomField>
    <fullName>Dto_ano__c</fullName>
    <label>Dto. (%/año)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>