force-app/main/default/objects/Quote/fields/Dto_Estandar__c.field-meta.xml
<CustomField>
    <fullName>Dto_Estandar__c</fullName>
    <label>Dto Estándar</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>