force-app/main/default/objects/Quote/fields/Dto_Kg2__c.field-meta.xml
<CustomField>
    <fullName>Dto_Kg2__c</fullName>
    <label>Dto. (€/Kg)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>