force-app/main/default/objects/Quote/fields/Dto_Primaservicio1__c.field-meta.xml
<CustomField>
    <fullName>Dto_Primaservicio1__c</fullName>
    <label>Dto. Primaservicio (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>