force-app/main/default/objects/Quote/fields/Dto_Primer_LL_euros_ton__c.field-meta.xml
<CustomField>
    <fullName>Dto_Primer_LL_euros_ton__c</fullName>
    <label>Dto. Primer LL. euros/ton</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>