force-app/main/default/objects/Quote/fields/Dto_Producto_gas__c.field-meta.xml
<CustomField>
    <fullName>Dto_Producto_gas__c</fullName>
    <label>Dto. Producto gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>