force-app/main/default/objects/Quote/fields/Duracion_contratado__c.field-meta.xml
<CustomField>
    <fullName>Duracion_contratado__c</fullName>
    <label>Duración contratado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>