force-app/main/default/objects/Quote/fields/Duracion_cuota_inversion__c.field-meta.xml
<CustomField>
    <fullName>Duracion_cuota_inversion__c</fullName>
    <label>Duración cuota inversión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>