force-app/main/default/objects/Quote/fields/Duracion_descuento__c.field-meta.xml
<CustomField>
    <fullName>Duracion_descuento__c</fullName>
    <label>Duración descuento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>