force-app/main/default/objects/Quote/fields/E18__c.field-meta.xml
<CustomField>
    <fullName>E18__c</fullName>
    <formula>E9__c + Forfait__c + Prima__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E18</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>