force-app/main/default/objects/Quote/fields/E9__c.field-meta.xml
<CustomField>
    <fullName>E9__c</fullName>
    <description>Campo de control solo visible para administradores</description>
    <formula>(Total_Inversion_no__c+Total_recuperable__c)*-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo de control solo visible para administradores</inlineHelpText>
    <label>E9</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>