force-app/main/default/objects/Quote/fields/EDC_Gr_a__c.field-meta.xml
<CustomField>
    <fullName>EDC_Gr_a__c</fullName>
    <label>EDC - Grúa</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>