force-app/main/default/objects/Quote/fields/Entrega_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Entrega_de_Producto__c</fullName>
    <label>Entrega de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bajo pedido</fullName>
            </value>
            <value>
                <fullName>Automática</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>