force-app/main/default/objects/Quote/fields/Enviado_a_Navision__c.field-meta.xml
<CustomField>
    <fullName>Enviado_a_Navision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviado a Navision</label>
    <type>Checkbox</type>
</CustomField>