force-app/main/default/objects/Quote/fields/Enviar_email__c.field-meta.xml
<CustomField>
    <fullName>Enviar_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar email</label>
    <type>Checkbox</type>
</CustomField>