force-app/main/default/objects/Quote/fields/Equipo_interior__c.field-meta.xml
<CustomField>
    <fullName>Equipo_interior__c</fullName>
    <label>Equipo interior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>