force-app/main/default/objects/Quote/fields/Equipos_a_instalar_Primagas__c.field-meta.xml
<CustomField>
    <fullName>Equipos_a_instalar_Primagas__c</fullName>
    <label>Equipos a instalar Primagas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>