force-app/main/default/objects/Quote/fields/Estacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Estacionalidad__c</fullName>
    <label>Estacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invierno</fullName>
            </value>
            <value>
                <fullName>Líneal</fullName>
            </value>
            <value>
                <fullName>Verano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>