force-app/main/default/objects/Quote/fields/Estado_instalaci_n__c.field-meta.xml
<CustomField>
    <fullName>Estado_instalaci_n__c</fullName>
    <label>Estado instalación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En ID</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>