force-app/main/default/objects/Quote/fields/Estado_tanque__c.field-meta.xml
<CustomField>
    <fullName>Estado_tanque__c</fullName>
    <label>Estado tanque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En ID</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>