force-app/main/default/objects/Quote/fields/Exterior__c.field-meta.xml
<CustomField>
    <fullName>Exterior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exterior</label>
    <type>Checkbox</type>
</CustomField>