force-app/main/default/objects/Quote/fields/Exterior_estandar__c.field-meta.xml
<CustomField>
    <fullName>Exterior_estandar__c</fullName>
    <label>Exterior estándar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>