force-app/main/default/objects/Quote/fields/Extras_exterior__c.field-meta.xml
<CustomField>
    <fullName>Extras_exterior__c</fullName>
    <label>Extras exterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>