force-app/main/default/objects/Quote/fields/Extras_interior__c.field-meta.xml
<CustomField>
    <fullName>Extras_interior__c</fullName>
    <label>Extras interior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>