force-app/main/default/objects/Quote/fields/F18__c.field-meta.xml
<CustomField>
    <fullName>F18__c</fullName>
    <formula>Margen_por_tonelada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F18</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>