force-app/main/default/objects/Quote/fields/F28__c.field-meta.xml
<CustomField>
    <fullName>F28__c</fullName>
    <formula>Delivery__c +118.38+ Otros_ingresos__c+ F18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F28</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>