force-app/main/default/objects/Quote/fields/Fecha_oferta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_oferta__c</fullName>
    <label>Fecha entrada de datos</label>
    <type>Date</type>
</CustomField>