force-app/main/default/objects/Quote/fields/Fecha_prevista_1er_llenado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_prevista_1er_llenado__c</fullName>
    <label>Fecha prevista 1er llenado</label>
    <type>Date</type>
</CustomField>