force-app/main/default/objects/Quote/fields/Financiacion_seleccionada__c.field-meta.xml
<CustomField>
    <fullName>Financiacion_seleccionada__c</fullName>
    <label>Financiación seleccionada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financia12</fullName>
            </value>
            <value>
                <fullName>Financia</fullName>
            </value>
            <value>
                <fullName>FinanciaGas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>