force-app/main/default/objects/Quote/fields/Forfait__c.field-meta.xml
<CustomField>
    <fullName>Forfait__c</fullName>
    <label>Forfait</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>