force-app/main/default/objects/Quote/fields/Garant_a_l_mite_de_cr_dito__c.field-meta.xml
<CustomField>
    <fullName>Garant_a_l_mite_de_cr_dito__c</fullName>
    <inlineHelpText>A rellenar por personal de la oficina</inlineHelpText>
    <label>Garantía límite de crédito</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>