force-app/main/default/objects/Quote/fields/gasoil_a_convertir__c.field-meta.xml
<CustomField>
    <fullName>gasoil_a_convertir__c</fullName>
    <description>Este campo se usa para el cálculo de los kilos y toneladas totales</description>
    <inlineHelpText>Usar este campo para convertir solo una parte de los litros de gasoil por año. Esta será la cantidad que se tendrá en cuenta para los cálculos.</inlineHelpText>
    <label>Gasoil a convertir</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>