force-app/main/default/objects/Quote/fields/Gasoil_convertido__c.field-meta.xml
<CustomField>
    <fullName>Gasoil_convertido__c</fullName>
    <formula>gasoil_a_convertir__c *0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gasoil convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>