force-app/main/default/objects/Quote/fields/Gesti_n_instalaci_n__c.field-meta.xml
<CustomField>
    <fullName>Gesti_n_instalaci_n__c</fullName>
    <label>Gestión instalación</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>