force-app/main/default/objects/Quote/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <label>GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>